--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
-repo_token: vA4kq5e0zy8uVea599fsf0f4nECYGu3iU
-gem 'coveralls', require: false
+language: java
+
+script: "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -t 66461f9a-9023-4170-b10c-83afcfc9503f
