--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ script: "mvn cobertura:cobertura"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t 66461f9a-9023-4170-b10c-83afcfc9503f
+
+install:
+  - wget https://github.com/google/protobuf/releases/download/v2.5.0/protobuf-2.5.0.tar.gz
+  - tar -xzvf protobuf-2.5.0.tar.gz
+  - pushd protobuf-2.5.0 && ./configure --prefix=/usr && make && sudo make install && popd
+
+before_install:
+  - ./install-protobuf.sh
