--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 
-script: "mvn cobertura:cobertura"
+script: "mvn test"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t 66461f9a-9023-4170-b10c-83afcfc9503f
